finished reflexes table but you cannot unclick the buttons

--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "nav-react": "^1.0.5",
     "navbar-react": "^1.0.4",
     "react": "^16.13.1",
+    "react-bootstrap-form": "^0.1.4-beta6",
     "react-containers": "^16.0.5",
     "react-dom": "^16.13.1",
+    "react-form": "^4.0.1",
     "react-select": "^5.5.2",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
