--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-containers": "^16.0.5",
     "react-dom": "^16.13.1",
     "react-form": "^4.0.1",
+    "react-router-dom": "^5.2.0",
     "react-select": "^5.5.2",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
